Closed
Bug 199310
Opened 23 years ago
Closed 23 years ago
CompositeDataSourceImpl doesn't release observers in its destructor
Categories
(Core Graveyard :: RDF, defect, P2)
Core Graveyard
RDF
Tracking
(Not tracked)
RESOLVED
FIXED
mozilla1.4alpha
People
(Reporter: dbaron, Assigned: dbaron)
References
Details
(Keywords: memory-leak, Whiteboard: [tind-mlk][patch])
Attachments
(1 file)
|
7.31 KB,
patch
|
janv
:
review+
alecf
:
superreview+
brendan
:
approval1.4a+
|
Details | Diff | Splinter Review |
CompositeDataSourceImpl doesn't release its observers in its destructor.
Somehow we haven't noticed this leak until it showed up on tinderbox last night.
(The leak currently on tinderbox involves an nsXPCWrappedJS that's an observer,
and which, by staying alive, keeps a bunch of JS objects, including two global
objects, alive.)
The fix is trivial -- convert to nsCOMArray.
| Assignee | ||
Comment 1•23 years ago
|
||
| Assignee | ||
Updated•23 years ago
|
Attachment #118553 -
Flags: superreview?(alecf)
Attachment #118553 -
Flags: review?(varga)
| Assignee | ||
Updated•23 years ago
|
Status: NEW → ASSIGNED
Priority: -- → P2
Whiteboard: [tind-mlk][patch]
Target Milestone: --- → mozilla1.4alpha
| Assignee | ||
Updated•23 years ago
|
Flags: blocking1.4a?
Comment 2•23 years ago
|
||
Comment on attachment 118553 [details] [diff] [review]
patch
nice!
sr=alecf
Attachment #118553 -
Flags: superreview?(alecf) → superreview+
Comment 3•23 years ago
|
||
Comment on attachment 118553 [details] [diff] [review]
patch
looks good
r=varga
Attachment #118553 -
Flags: review?(varga) → review+
| Assignee | ||
Updated•23 years ago
|
Attachment #118553 -
Flags: approval1.4a?
| Assignee | ||
Comment 4•23 years ago
|
||
This should be pretty low-risk, although there's always the possibility that a
leak fix could expose overreleasing somewhere else and lead to crashes. It's
also possible that this could fix leaks elsewhere.
Updated•23 years ago
|
Flags: blocking1.4a? → blocking1.4a+
Comment 5•23 years ago
|
||
Comment on attachment 118553 [details] [diff] [review]
patch
Should be safe, good to check out via an alpha release.
/be
Attachment #118553 -
Flags: approval1.4a? → approval1.4a+
| Assignee | ||
Comment 6•23 years ago
|
||
*** Bug 199269 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 7•23 years ago
|
||
Fix checked in to trunk, 2003-03-26 16:01 PST.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Updated•7 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•