Convert mObservers to nsCOMArray<nsIRDFObserver> to fix leak of observers.  b=199310  r=varga  sr=alecf  a=brendan